docs: implementing swagger documentation in controllers
